Enforce GoogleJavaFormat:1.33.0